v3/crates/engine/tests/snapshots/execution__common__rowsets_execute__models__select_many__nested_select__relationship_admin.snap
---
source: crates/engine/tests/common.rs
expression: rowsets
---
{
  "Ok": [
    {
      "rows": [
        {
          "id": 1,
          "location": {
            "city": "London",
            "campuses": [
              "Mile End",
              "Whitechapel",
              "Charterhouse Square",
              "West Smithfield"
            ]
          },
          "location_country": {
            "country": "UK"
          },
          "staff": [
            {
              "last_name": "Landin",
              "specialities": [
                "Computer Science",
                "Education"
              ],
              "actor": {
                "rows": [
                  {
                    "name": "Peter"
                  }
                ]
              }
            }
          ],
          "staff_first_name": [
            {
              "first_name": "Peter"
            }
          ],
          "departments": [
            "Humanities and Social Sciences",
            "Science and Engineering",
            "Medicine and Dentistry"
          ]
        },
        {
          "id": 2,
          "location": {
            "city": "Gothenburg",
            "campuses": [
              "Johanneberg",
              "Lindholmen"
            ]
          },
          "location_country": {
            "country": "Sweden"
          },
          "staff": [
            {
              "last_name": "Hughes",
              "specialities": [
                "Computer Science",
                "Functional Programming",
                "Software Testing"
              ],
              "actor": {
                "rows": []
              }
            },
            {
              "last_name": "Claessen",
              "specialities": [
                "Computer Science",
                "Functional Programming",
                "Automated Reasoning"
              ],
              "actor": {
                "rows": []
              }
            }
          ],
          "staff_first_name": [
            {
              "first_name": "John"
            },
            {
              "first_name": "Koen"
            }
          ],
          "departments": [
            "Architecture and Civil Engineering",
            "Computer Science and Engineering",
            "Electrical Engineering",
            "Physics",
            "Industrial and Materials Science"
          ]
        },
        {
          "id": 3,
          "location": null,
          "location_country": null,
          "staff": null,
          "staff_first_name": null,
          "departments": [
            "nothing",
            null
          ]
        }
      ]
    }
  ]
}
